<resources>
    <string name="app_name">PrepLotus</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">My Result</string>
    <string name="title_notifications">Packages</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="facebook_app_id">730704728380211</string>
    <string name="fb_login_protocol_scheme">fb730704728380211</string>
    <string name="facebook_client_token">ea4456a08b0029b399d146e1e5b615af</string>


    <string name="google_client_id">861735930564-p5brhtp99gsqaqslcpomr5pr09pt0bju.apps.googleusercontent.com</string>
    <string name="google_client_secret">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</string>

    <string name="login_msg_one">Detailed Insights\nThrough Mock Tests\nAnd Subject Tests</string>
    <string name="login_msg_two">Learn\nFrom Exam\nOriented Notes</string>
    <string name="login_msg_three">Enhance Your\nLearning And\nExam\'s Preparation</string>

    <string name="login_with_google">Sign In with Google</string>
    <string name="login_with_facebook">Sign In with Facebook</string>
    <string name="signup_email">Sign Up with Email</string>
    <string name="enter_referral_code">Enter Referral Code</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="available_coupon">Available Coupons</string>
    <string name="already_have_an_ac">Already have an account?</string>
    <string name="login">LOGIN</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="applied_coupon">Applied Coupon</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="plan_price">Plan Price</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="make_payment">Make a Payment</string>
    <string name="apply">Apply</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to Logout?</string>
    <string name="quit_exam">Do you want to Submit this Exam?</string>
    <string name="proceed">PROCEED</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="signin_msg">By signing in you agree to our</string>
    <string name="contact_us_msg">For any queries,</string>
    <string name="and">&amp;</string>
    <string name="terms_condi">Terms &amp; Condition</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="register">Register</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password">Change Password</string>
    <string name="login_account">Login Account</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="your_email">Your Email</string>
    <string name="your_msg">Your Message</string>
    <string name="contact_us_msg_">Your message has been sent, You will hear from us as soon as possible.</string>
    <string name="notifications">Notifications</string>
    <string name="how_it_works">How it works</string>
    <string name="my_subscription">My Subscriptions</string>
    <string name="coin_balance">My Coin Balance</string>
    <string name="lifetime_earnings">Lifetime Earnings</string>
    <string name="coin_spent">Coins Spent</string>
    <string name="coin_history">Coin History</string>
    <string name="pe_instructions">Practice &amp; Earn Instructions</string>
    <string name="pe_instructions_msg">- For every correct Attempt/answer from the Tests available in the App you will Get 1Coin i.e.  1 CORRECT ANSWER=1 COIN
\n\n- Your correct attempt/answer will be considered only from Your FIRST ATTEMPT of that Test and subsequent attempts will not be considered</string>
    <string name="name">Name</string>
    <string name="check_coin_balance">Check Coin Balance</string>
    <string name="attempt_now">Attempt Now</string>
    <string name="invite_now">Invite Now</string>
    <string name="other_way_earn">Other way to Earn</string>
    <string name="how_use_coins">How to use these Coins</string>
    <string name="how_use_coins_msg">- Redeem these coins during subscription to get upto 50℅ off in subscription plan</string>
    <string name="other_way_earn_msg"><b>REFER &amp; EARN</b> - You can also earn coins by inviting your friend Through Referral</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="invite_your_friends_now">Invite Your Friends Now</string>
    <string name="your_code">Your Code :</string>
    <string name="copy_code">COPY CODE</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_u"><u>Forgot Password</u></string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_underline"><u>Contact Us</u></string>
    <string name="remove_bracket">[ Remove ]</string>
    <string name="notes">Notes</string>
    <string name="mock_test">Mock Test</string>
    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="practice_earn">Practice &amp; Earn</string>
    <string name="refer_earn">Refer &amp; Earn</string>
    <string name="redeem">Redeem</string>
    <string name="select_category">Select Exam / Exam Group</string>
    <string name="select_group">Select Category</string>
    <string name="subject">Subject</string>
    <string name="description">Description</string>
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="update_profile">Update Profile</string>
    <string name="total_marks">Total Marks</string>
    <string name="percentage">Percentage</string>
    <string name="score">Score</string>
    <string name="scorecard">Score Card</string>
    <string name="rank">Rank</string>
    <string name="attempted_questions">Attempted Questions</string>
    <string name="left_questions">Left Questions</string>
    <string name="correct_questions">Correct Questions</string>
    <string name="total_score">Total Score</string>
    <string name="total_questions">Total Questions</string>
    <string name="total_amount">Total Amount</string>
    <string name="incorrect_questions">Incorrect Questions</string>
    <string name="unattempted_questions">Unattempted Questions</string>
    <string name="correct_marks">Correct Marks</string>
    <string name="max_marks">Maximum Marks</string>
    <string name="negative_marks">Negative Marks</string>
    <string name="total_time_taken">Total Time Taken</string>
    <string name="test_time">Test Time</string>
    <string name="leader_board">Leader Board</string>
    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="profile">Profile</string>
    <string name="clear_response">Clear Response</string>


    <string name="something_wrong_msg">Something went wrong, Please try again after sometime.</string>
    <string name="network_msg">Please make sure that you have working internet connection.</string>
    <string name="please_wait">Please wait...</string>
    <string name="name_msg">Please enter your name.</string>
    <string name="otp_msg">Please enter OTP.</string>
    <string name="email_msg">Please enter your email address.</string>
    <string name="subject_msg">Please enter Subject.</string>
    <string name="des_msg">Please enter Description.</string>
    <string name="valid_email_msg">Please enter valid email address.</string>
    <string name="valid_phone_msg">Please enter valid phone number.</string>
    <string name="valid_password_msg">Please enter minimum 6 digit password.</string>
    <string name="valid_otp_msg">Please enter valid OTP.</string>
    <string name="password_match_msg">Password doesn\'t match.</string>
    <string name="old_password_msg">Please enter your old password.</string>
    <string name="user_guide">User Guide</string>
    <string name="about_us">About Us</string>
    <string name="start_exam">START EXAM</string>
    <string name="my_result">My Results</string>
    <string name="my_coins">My Coins</string>
    <string name="my_exams">My Exams</string>
    <string name="subscription_details">Subscription Details</string>
    <string name="selected_plan">Selected Plan</string>
    <string name="invite_yr_fri">Invite you friends to join this app and earn rewards</string>
    <string name="validity">Validity</string>
    <string name="edit">EDIT</string>
    <string name="back">BACK</string>
    <string name="add_exam">Add Exam</string>
    <string name="see_result">See Result</string>
    <string name="update_now">Update Now</string>
    <string name="app_update">App Update</string>
    <string name="app_update_msg">Current version of this application is outdated. New version of app is available at play store so please download it to keep up to date with latest features.</string>
    <string name="view_result">View Result</string>
    <string name="view_all_result">View All Results</string>
    <string name="attempt_again">Attempt again as Practice test</string>
    <string name="attempt_msg">Do you want to take \nthis test again?</string>
    <string name="re_msg_one">Invite your freinds to join <b> PrepLotus </b> using your link or referral code.</string>
    <string name="re_msg_two">You earn <b>300 coins</b> on every successful registration that your friends makes.</string>
    <string name="re_msg_three">Use these coins to get <b>up to 50% off</b> in subscription plans.</string>

    <string-array name="speed">

        <item>1x</item>
        <item>1.25x</item>
        <item>1.50x</item>
        <item>1.75x</item>
        <item>2x</item>

    </string-array>

</resources>