<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/icon_left_arrow"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/practice_earn"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pe_instructions"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/grey2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pe_instructions_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAttemptNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/attempt_now"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/other_way_earn"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/grey2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other_way_earn_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvInviteNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/invite_now"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/how_use_coins"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@color/grey2" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_use_coins_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCoinBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/check_coin_balance"
            android:textColor="@color/purple_700"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>