<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple_700">

        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/icon_left_arrow"
            app:tint="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contact_us"
            android:textColor="@color/white"
            android:textSize="@dimen/_17sdp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/your_email"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_grey_border"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/subject"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etSubject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_grey_border"
            android:inputType="textEmailSubject"
            android:maxLines="1"
            android:imeOptions="actionNext"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/your_msg"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14sdp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_grey_border"
            android:inputType="textMultiLine"
            android:maxLines="6"
            android:minLines="6"
            android:gravity="start|top"
            android:layout_marginTop="@dimen/_8sdp"
            android:padding="@dimen/_12sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_30sdp"
            android:background="@drawable/bg_login_btn_solid"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>